--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
   "name": "layali-dreams-admin",
-  "version": "1.0.0",
-  "description": "Layali Dreams Admin Dashboard - Manage stories and orders",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@supabase/supabase-js": "^2.38.0",
+    "@supabase/supabase-js": "^2.33.1",
+    "history": "^5.3.0",
+    "lucide-react": "^0.279.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1",
-    "tailwindcss": "^3.3.0",
-    "@headlessui/react": "^1.7.0",
-    "@heroicons/react": "^2.0.0",
-    "lucide-react": "^0.294.0"
+    "react-router-dom": "^6.15.0",
+    "tailwindcss": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "vercel-build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
