--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "vercel-build": "CI=false react-scripts build"
+    "vercel-build": "react-scripts build",
+    "serve": "serve build -s -n -L -p $PORT"
   },
   "eslintConfig": {
     "extends": [
