--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,56 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "build" }
-    }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "framework": "create-react-app",
   "routes": [
-    {
-      "src": "^/static/(.*)",
-      "headers": {
-        "cache-control": "max-age=31536000,immutable"
-      }
-    },
-    {
-      "src": "^/(.*)",
+    { "handle": "filesystem" },
+    { 
+      "src": "/admin/(.*)", 
       "dest": "/index.html",
       "continue": true
+    },
+    { 
+      "src": "/admin", 
+      "dest": "/index.html",
+      "continue": true
+    },
+    { 
+      "src": "/(.*)", 
+      "dest": "/index.html"
     }
   ],
-  "rewrites": [
-    { "source": "/admin/(.*)", "destination": "/index.html" },
-    { "source": "/admin", "destination": "/index.html" }
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Frame-Options",
+          "value": "SAMEORIGIN"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        },
+        {
+          "key": "Strict-Transport-Security",
+          "value": "max-age=31536000; includeSubDomains; preload"
+        }
+      ]
+    },
+    {
+      "source": "/static/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
   ]
 } 
  
